# UCO_yellowsense

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  yellowsense.db
apps/api/: pyproject.toml  yellowsense.db
apps/api/app/: main.py
apps/api/app/ai/decisioning/: churn_risk.py  fraud_detection.py  lead_scoring.py  next_best_action.py  product_propensity.py
apps/api/app/ai/nlp/: action_extraction.py  query_routing.py  sentiment.py
apps/api/app/api/v1/: __init__.py  ai.py  analytics.py  audit.py  auth.py  complaints.py  customers.py  deps.py  leads.py  meetings.py  notifications.py  queries.py  visits.py
apps/api/app/core/: config.py  cryptography.py  security.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/models/: models.py
apps/api/app/tests/: test_backend.py
apps/api/yellowsense_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(platform)/: layout.tsx
apps/web/app/(platform)/ai-copilot/: page.tsx
apps/web/app/(platform)/analytics/: page.tsx
apps/web/app/(platform)/audit/: page.tsx
apps/web/app/(platform)/complaints/: page.tsx
apps/web/app/(platform)/customers/: page.tsx
apps/web/services/: DEMO_DATA.ts  api.ts  db.ts  sync.ts
apps/web/stores/: demoStore.ts
docs/architecture/: PRODUCTION_EVOLUTION.md
docs/demo/: DEMO_SCRIPT.md
infra/docker/: Dockerfile.api  Dockerfile.web
scripts/: reset_demo.py  seed_demo_data.py
(+10 files in other folders)
